2024-11-05T12:31:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11684225462 # 631
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-05
* notice: last 14d: unq all: 6 9
* notice: prev accum: outdated-unq outdated-all / unq all: 2272 4522 / 2280 4530
* notice: next accum: outdated-unq outdated-all / unq all: 2272 4522 / 2281 4531
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-11-05]

2024-11-04T12:34:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11664315006 # 629
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-04
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 2271 4521 / 2279 4529
* notice: next accum: outdated-unq outdated-all / unq all: 2272 4522 / 2280 4530
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-21] / [2024-11-04]

2024-11-04T01:19:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11656449965 # 628
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-04
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 2270 4520 / 2279 4529
* notice: next accum: outdated-unq outdated-all / unq all: 2271 4521 / 2279 4529
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-20] / []

2024-11-02T01:16:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11638628520 # 624