@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-11-05T12:31:45Z",
-  "count_outdated" : 4522,
-  "uniques_outdated" : 2272,
+  "timestamp" : "2024-11-06T01:16:03Z",
+  "count_outdated" : 4523,
+  "uniques_outdated" : 2273,
   "count" : 4531,
   "uniques" : 2281,
   "clones" : [
-    {
-      "timestamp": "2024-10-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-24T00:00:00Z",
       "count": 1,
